--- a/app/views/washer/index.html.erb
+++ b/app/views/washer/index.html.erb
@@ -1,5 +1,5 @@
     <!-- Navigation -->
-<nav class="navbar navbar-expand-lg  bg-light fixed-top">
+<nav class="navbar navbar-expand-lg bg-light fixed-top">
    <div class="container">
     <img src="assets/logo.png" alt="logo">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="   navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,16 +58,10 @@
                 </div>
                 <div class="form-group col-md-4 ">
                   <label for="where" class="where">Where</label>
-                  <select class="form-control where-search" id="where">
-                      <option>Los Angeles</option>
-                      <option>Los Angeles</option>
-                      <option>Los Angeles</option>
-                      <option>Los Angeles</option>
-                      <option>Los Angeles</option>
-                    </select>
+                  <input type="text" class="form-control search" id="city" placeholder="Los Angeles, Kansas, etc">
                 </div>
                 <div class="col-md-2">
-                  <button type="submit" class="btn btn-lg btn-success  search-button"><i class="fas fa-search"></i> Search</button>
+                  <button type="submit" id="search-list" class="btn btn-lg btn-success  search-button"><i class="fas fa-search"></i> Search</button>
                   <button type="submit" class="btn btn-xs btn-outline-success locate-button-mobile d-md-none d-sm-block"><i class="fas fa-map-marker-alt mr-1"></i> locate</button>
                 </div>
               </div>
