--- a/app/views/washer/index.html.erb
+++ b/app/views/washer/index.html.erb
@@ -1,5 +1,5 @@
     <!-- Navigation -->
-<nav class="navbar navbar-expand-lg bg-light fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
    <div class="container">
     <img src="assets/logo.png" alt="logo">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="   navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
