--- a/app/assets/stylesheets/indexone.css
+++ b/app/assets/stylesheets/indexone.css
@@ -11,7 +11,7 @@
   src: url("/assets/CircularStd-BlackItalic.otf");
 }
 @font-face {
-  font-family: CircularStd-Bold;
+  font-family: CircularStd-Bold; 
   src: url("/assets/CircularStd-Bold.otf");
 }
 @font-face {
@@ -42,7 +42,7 @@
 :root{
   --textblue: #293241;
   --header-blue: #383E4D;
-  --grey: #313947;
+  --index-grey: #313947;
   --middlegrey:#656565;
   --label-blue: #272B34;
   --form-text-color: #9B9B9B;
@@ -149,7 +149,7 @@ body{
 .all-new{
   font-family: Avenir-Book;
   font-size: 50px;
-  color: var(--grey) !important;
+  color: var(--index-grey) !important;
   letter-spacing: 0;
   margin-bottom: 0px !important;
 }
@@ -160,6 +160,17 @@ body{
   letter-spacing: 0;
   margin-top: -4px !important;
 }
+.search-city{
+  width: 275px !important;
+  height: 32px !important;
+  border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important;
+  font-family: CircularStd-Book !important; 
+  font-size: 12px !important;
+  color: var(--form-text-color) !important;
+  box-shadow: none !important;
+  border: 1px solid var(--white) !important;
+} 
 .search{
   width: 428px !important;
   height: 32px !important;
@@ -224,7 +235,7 @@ body{
 .locate-row{
     margin-bottom: -1px;
  }
-.locate-button{
+.index-locate-button{
   width: 82px;
   height: 22px;
   padding: 0px !important;
@@ -234,7 +245,7 @@ body{
   border-bottom-right-radius: 0px !important;
   margin-left: 40px;
 }
-.locate-button:hover,.locate-button:focus{
+.index-locate-button:hover,.index-locate-button:focus{
   box-shadow: none !important;
 }
 .browse-highlight{
@@ -648,7 +659,7 @@ p.search-work-tag {
 .all-new{
   font-family: Avenir-Book;
   font-size: 32px;
-  color: var(--grey) !important;
+  color: var(--index-grey) !important;
   letter-spacing: 0;
   margin-bottom: 8px !important;
 }
@@ -700,7 +711,7 @@ p.how-works>.see {
   width: 147px !important;
   height: 40px !important;
 }
-.locate-button-mobile{
+.index-locate-button-mobile{
   width: 147px !important;
   height: 40px !important;
   font-size: 16px !important;
@@ -796,7 +807,7 @@ p.how-works>.see {
 .bg-light{
   background: transparent !important;
 }
-.locate-button,.locate-row{
+.index-locate-button,.locate-row{
   display: none !important;
 }
 .jumbotron{
@@ -829,7 +840,7 @@ p.how-works>.see {
 .all-new{
   font-family: Avenir-Book;
   font-size: 32px;
-  color: var(--grey) !important;
+  color: var(--index-grey) !important;
   letter-spacing: 0;
   margin-bottom: 8px !important;
 }
@@ -884,7 +895,7 @@ p.how-works>.see {
 .d-sm-block{
   display: inline !important;
 }
-.locate-button-mobile{
+.index-locate-button-mobile{
   width: 147px !important;
   height: 40px !important;
   font-size: 16px !important;
@@ -986,7 +997,7 @@ p.how-works>.see {
 .all-new{
   font-family: Avenir-Book;
   font-size: 32px;
-  color: var(--grey) !important;
+  color: var(--index-grey) !important;
   letter-spacing: 0;
   margin-bottom: 8px !important;
 }
@@ -1007,7 +1018,7 @@ p.how-works>.see {
 .where-search,.where{
   width: 150px !important;
 }
-.locate-button{
+.index-locate-button{
   margin-left: -30px !important;
 }
 .how-works {
