--- a/app/views/washer/index.html.erb
+++ b/app/views/washer/index.html.erb
@@ -28,7 +28,7 @@
       <button class="btn btn-success my-2 my-sm-0 addlisting" type="submit">ADD LISTING</button>
     </form>
   </div>
-   </div>
+   </div> 
 </nav>
 <!-- navigation ends-->
 
@@ -48,7 +48,7 @@
         <div class="explore-search">
             <div class="form-row locate-row">
               <div class="col-md-2 offset-md-8">
-                  <button type="submit" class="btn btn-xs btn-success locate-button d-none d-sm-block"><i class="fas fa-map-marker-alt mr-1"></i> Locate Me</button>
+                  <button type="submit" class="btn btn-xs btn-success index-locate-button d-none d-sm-block"><i class="fas fa-map-marker-alt mr-1"></i> Locate Me</button>
               </div>
             </div>
               <form class="form-row" action="/list">
@@ -58,11 +58,11 @@
                 </div>
                 <div class="form-group col-md-4 ">
                   <label for="where" class="where">Where</label>
-                  <input type="text" class="form-control search" name="city" id="city" placeholder="Los Angeles, Kansas, etc">
+                  <input type="text" class="form-control search-city" name="city" id="city" placeholder="Los Angeles, Kansas, etc">
                 </div>
                 <div class="col-md-2">
                   <button type="submit" id="search-list" class="btn btn-lg btn-success  search-button"><i class="fas fa-search"></i> Search</button>
-                  <button type="submit" class="btn btn-xs btn-outline-success locate-button-mobile d-md-none d-sm-block"><i class="fas fa-map-marker-alt mr-1"></i> locate</button>
+                  <button type="submit" class="btn btn-xs btn-outline-success index-locate-button-mobile d-md-none d-sm-block"><i class="fas fa-map-marker-alt mr-1"></i> locate</button>
                 </div>
               </form>
         </div>
