--- a/app/views/washer/list.html.erb
+++ b/app/views/washer/list.html.erb
@@ -168,9 +168,16 @@
                   <form class="mt-4 p-3 d-none d-sm-block">
                     <h5 class="listpage-filter-heading">Filter</h5>
                         <div class="form-group">
-                          <select id="inputState" class="form-control">
+                          <select id="inputState" class="form-control select-category">
                             <option selected>Category</option>
-                            <option>...</option>
+                            <option value="automatic">Automatic</option>
+                            <option value="handwash">Handwash</option>
+                            <option value="touchless">Touchless</option>
+                            <option value="spray">Spray</option>
+                            <option value="interior">Interior</option>
+                            <option value="oil_change">Oil Change</option>
+                            <option value="shampoo">Shampoo</option>
+                            <option value="free_vacuum">Free Vacuum</option>
                           </select>
                         </div>
 
