--- a/app/views/washer/index.html.erb
+++ b/app/views/washer/index.html.erb
@@ -34,7 +34,7 @@
 
 
 <!-- jumbotron -->
-
+<div class="explore-header">
   <div class="jumbotron">
     <div class="gradient">
       <div class="container">
@@ -92,6 +92,7 @@
       </div>
     </div>
   </div>
+</div>
 <!-- jumbotron -->
 
 
