--- a/app/views/washer/list.html.erb
+++ b/app/views/washer/list.html.erb
@@ -289,7 +289,11 @@
                               <div class="card-body pt-2">
                                 <div class="row">
                                     <div class="col-md-8">
-                                      <p class="shop-title"><%= result.name %></p>
+                                      <p class="shop-title">
+                                        <a href="/info/<%= result.name.squish.downcase.gsub(" ","-") %>/<%= result.id %>">
+                                          <%= result.name %>
+                                        </a>    
+                                      </p>
                                     </div>
                                     <div class="col-12 col-md-4  col-sm-12 ">
                                       <p class=" text-center small-text open">open</p>
