--- a/app/assets/stylesheets/product.css
+++ b/app/assets/stylesheets/product.css
@@ -258,9 +258,9 @@ p.verified{
   line-height: 30px;
 }
 .shadow-sm{
-  -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,0.05); !important;
-  -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,0.05); !important;
-  box-shadow: 0 2px 10px 0 rgba(0,0,0,0.05); !important;
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0,0,0,0.05) !important;
+  -moz-box-shadow: 0 2px 10px 0 rgba(0,0,0,0.05) !important;
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,0.05) !important;
 }
 .card-address{
   width: 242px !important;
