--- a/app/views/washer/index.html.erb
+++ b/app/views/washer/index.html.erb
@@ -13,7 +13,7 @@
           EXPLORE <i class="fas fa-chevron-down"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" data-toggle="modal" data-target="#exampleModalCenter">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
       </li>
       <li class="nav-item">
@@ -32,9 +32,167 @@
 </nav>
 <!-- navigation ends-->
 
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+    <div class="modal-content">
+      <div class="modal-header modal-header-action">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Cities</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body modal-body-action">
+      <div class="row action-cities">
+      <div class="col">
+         <ul class="list-group list-group-flush">
+             <li class="list-group-item"><a href="#">New York</a></li>
+             <li class="list-group-item"><a href="#">Albuquerque</a></li>
+             <li class="list-group-item"><a href="#">San Jose</a></li>
+             <li class="list-group-item"><a href="#">Fort Worth</a></li>
+             <li class="list-group-item"><a href="#">Milwaukee</a></li>
+             <li class="list-group-item"><a href="#">Nashville</a></li>
+             <li class="list-group-item"><a href="#">Baltimore</a></li>
+             <li class="list-group-item"><a href="#">Saint Paul</a></li>
+             <li class="list-group-item"><a href="#">Raleigh</a></li>
+             <li class="list-group-item"><a href="#">Boston</a></li>
+             <li class="list-group-item"><a href="#">Salt Lake City</a></li>
+             <li class="list-group-item"><a href="#">Tulsa</a></li>
+           </ul> 
+      </div>
+      <div class="col">
+         <ul class="list-group list-group-flush">
+             <li class="list-group-item"><a href="#">Brooklyn</a></li>
+             <li class="list-group-item"><a href="#">Chicago</a></li>
+             <li class="list-group-item"><a href="#">Houston</a></li>
+             <li class="list-group-item"><a href="#">San Francisco</a></li>
+             <li class="list-group-item"><a href="#">Seattle</a></li>
+             <li class="list-group-item"><a href="#">Atlanta</a></li>
+             <li class="list-group-item"><a href="#">Los Angeles</a></li>
+             <li class="list-group-item"><a href="#">Philadelphia</a></li>
+             <li class="list-group-item"><a href="#">Dallas</a></li>
+             <li class="list-group-item"><a href="#">Las Vegas</a></li>
+             <li class="list-group-item"><a href="#">Orlando</a></li>
+             <li class="list-group-item"><a href="#">San Antonio</a></li>
+           </ul> 
+      </div>
+      <div class="col">
+         <ul class="list-group list-group-flush">
+             <li class="list-group-item"><a href="#">Denver</a></li>
+             <li class="list-group-item"><a href="#">Austin</a></li>
+             <li class="list-group-item"><a href="#">Saint Louis</a></li>
+             <li class="list-group-item"><a href="#">Tampa</a></li>
+             <li class="list-group-item"><a href="#">Washington</a></li>
+             <li class="list-group-item"><a href="#">Jacksonville</a></li>
+             <li class="list-group-item"><a href="#">Columbus</a></li>
+             <li class="list-group-item"><a href="#">Pittsburgh</a></li>
+             <li class="list-group-item"><a href="#">Phoenix</a></li>
+             <li class="list-group-item"><a href="#">San Diego</a></li>
+             <li class="list-group-item"><a href="#">Charlorre</a></li>
+             <li class="list-group-item"><a href="#">Indianapolis</a></li>
+           </ul> 
+      </div>
+      <div class="col">
+         <ul class="list-group list-group-flush">
+             <li class="list-group-item"><a href="#">Marietta</a></li>
+             <li class="list-group-item"><a href="#">Naples</a></li>
+             <li class="list-group-item"><a href="#">Bakersfild</a></li>
+             <li class="list-group-item"><a href="#">Columbia</a></li>
+             <li class="list-group-item"><a href="#">Mesa</a></li>
+             <li class="list-group-item"><a href="#">Lexington</a></li>
+             <li class="list-group-item"><a href="#">Oakland</a></li>
+             <li class="list-group-item"><a href="#">Boca Raton</a></li>
+             <li class="list-group-item"><a href="#">Greenboro</a></li>
+             <li class="list-group-item"><a href="#">Fort Myers</a></li>
+             <li class="list-group-item"><a href="#">Long Beach</a></li>
+             <li class="list-group-item"><a href="#">Irvine</a></li>
+           </ul> 
+      </div>
+      <div class="col">
+         <ul class="list-group list-group-flush">
+             <li class="list-group-item"><a href="#">Miami</a></li>
+             <li class="list-group-item"><a href="#">Cincinnati</a></li>
+             <li class="list-group-item"><a href="#">Tucson</a></li>
+             <li class="list-group-item"><a href="#">Louisville</a></li>
+             <li class="list-group-item"><a href="#">Sacramento</a></li>
+             <li class="list-group-item"><a href="#">Bronx</a></li>
+             <li class="list-group-item"><a href="#">Memphis</a></li>
+             <li class="list-group-item"><a href="#">Cleveland</a></li>
+             <li class="list-group-item"><a href="#">Oklahoma City</a></li>
+             <li class="list-group-item"><a href="#">Portland</a></li>
+             <li class="list-group-item"><a href="#">Minneapolis</a></li>
+           </ul> 
+      </div>
+      <div class="col">
+         <ul class="list-group list-group-flush">
+             <li class="list-group-item"><a href="#">Scottsdale</a></li>
+             <li class="list-group-item"><a href="#">Honolulu</a></li>
+             <li class="list-group-item"><a href="#">New Orleans</a></li>
+             <li class="list-group-item"><a href="#">Baton Rouge</a></li>
+             <li class="list-group-item"><a href="#">Virginia Beach</a></li>
+             <li class="list-group-item"><a href="#">Grand Rapids</a></li>
+             <li class="list-group-item"><a href="#">West Palm Beach</a></li>
+             <li class="list-group-item"><a href="#">Sarasoa</a></li>
+             <li class="list-group-item"><a href="#">Witchita City</a></li>
+             <li class="list-group-item"><a href="#">Richmond</a></li>
+             <li class="list-group-item"><a href="#">Dayton</a></li>
+           </ul> 
+      </div>
+      <div class="col">
+         <ul class="list-group list-group-flush">
+             <li class="list-group-item"><a href="#">Riverside</a></li>
+             <li class="list-group-item"><a href="#">Little Rock</a></li>
+             <li class="list-group-item"><a href="#">Greenville</a></li>
+             <li class="list-group-item"><a href="#">chattanooa</a></li>
+             <li class="list-group-item"><a href="#">Anchorage</a></li>
+             <li class="list-group-item"><a href="#">Madison</a></li>
+             <li class="list-group-item"><a href="#">Anaheim</a></li>
+             <li class="list-group-item"><a href="#">Hialeah</a></li>
+             <li class="list-group-item"><a href="#">Plano</a></li>
+             <li class="list-group-item"><a href="#">Spokane</a></li>
+             <li class="list-group-item"><a href="#">Staten Island</a></li>
+           </ul> 
+      </div>
+       <div class="col">
+         <ul class="list-group list-group-flush">
+             <li class="list-group-item"><a href="#">Birmingham</a></li>
+             <li class="list-group-item"><a href="#">Fresno</a></li>
+             <li class="list-group-item"><a href="#">Fort Lauderdale</a></li>
+             <li class="list-group-item"><a href="#">Omaha</a></li>
+             <li class="list-group-item"><a href="#">Colrado Springs</a></li>
+             <li class="list-group-item"><a href="#">Kansas City</a></li>
+             <li class="list-group-item"><a href="#">Buffalo</a></li>
+             <li class="list-group-item"><a href="#">Detroit</a></li>
+             <li class="list-group-item"><a href="#">Rochester</a></li>
+             <li class="list-group-item"><a href="#">El Paso</a></li>
+             <li class="list-group-item"><a href="#">Knoxville</a></li>
+           </ul> 
+      </div>
+      <div class="col">
+         <ul class="list-group list-group-flush">
+             <li class="list-group-item"><a href="#">Santa Ana</a></li>
+             <li class="list-group-item"><a href="#">Mobile</a></li>
+             <li class="list-group-item"><a href="#">Reno</a></li>
+             <li class="list-group-item"><a href="#">Saint Petersburg</a></li>
+             <li class="list-group-item"><a href="#">Tallahassee</a></li>
+             <li class="list-group-item"><a href="#">Arlington</a></li>
+             <li class="list-group-item"><a href="#">Vancouver</a></li>
+             <li class="list-group-item"><a href="#">Fort Wayne</a></li>
+           </ul> 
+      </div> 
+
+
+   </div>
+      </div>
+      <div class="modal-footer modal-footer-action">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <!-- jumbotron -->
-<div class="explore-header">
+<div class="explore-header"> 
   <div class="jumbotron">
     <div class="gradient">
       <div class="container">
@@ -51,7 +209,7 @@
                   <button type="submit" class="btn btn-xs btn-success index-locate-button d-none d-sm-block"><i class="fas fa-map-marker-alt mr-1"></i> Locate Me</button>
               </div>
             </div>
-              <form class="form-row" action="/list">
+              <form class="form-row index-search" action="/list">
                 <div class="form-group col-md-6">
                   <label for="what" class="what">What</label>
                   <input type="text" class="form-control search" name="what" id="what" placeholder="Ex.Day Spa, Hair Cutting, Nail Salons, etc">
