--- a/app/assets/stylesheets/indexone.css
+++ b/app/assets/stylesheets/indexone.css
@@ -1,6 +1,6 @@
 *{
-	margin:0px 0px; 
-	padding: 0px 0px;
+  margin:0px 0px; 
+  padding: 0px 0px;
 }
 @font-face {
   font-family: CircularStd-Black;
@@ -54,6 +54,31 @@
 body{
   
 }
+.modal-body-action{
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+  color: #ffffff !important;
+  background-color: var(--orange) !important;
+}
+.modal-header-action{
+  border-bottom: none !important;
+  color: #ffffff !important;
+  background-color: var(--orange) !important;
+} 
+.modal-footer-action{
+  border-top: none !important;
+  color: #ffffff;
+  background-color: var(--orange) !important;
+}
+.action-cities{
+  color: #ffffff;
+  background-color: var(--orange) !important;
+}
+.action-cities .list-group-item{
+  color: #ffffff;
+  background-color: var(--orange) !important;
+}
+
 .explore-header{
   min-height: 100vh !important; 
   max-height: 100% !important; 
@@ -125,7 +150,9 @@ body{
 }
 .jumbotron{
   width: auto;
-  height: 821px;
+  height: 100%;
+  min-height: 100vh !important; 
+  max-height: 100% !important; 
   border-radius: 0px !important;
   background:url("/assets/bg.jpg");
   background-size: cover;
@@ -133,6 +160,7 @@ body{
   position: relative;
   z-index: 0;
   margin-bottom: 0px !important;
+  padding-bottom: 0px !important;
   padding-top: 90px !important;
 }
 .jumbotron::before{
@@ -142,6 +170,8 @@ body{
     right: 0;
     left: 0;
     height: 100%;
+    min-height: 100vh !important; 
+    max-height: 100% !important; 
     background-image: linear-gradient(0deg, #293241 0%, rgba(159,159,159,0.00) 100%);
 }
 .jumbotron-heading{
@@ -150,6 +180,9 @@ body{
   color: var(--header-blue) !important;
   letter-spacing: 0;
   margin-bottom: -22px !important;
+}
+.index-search{
+  background-color: transparent !important;
 }
 .all-new{
   font-family: Avenir-Book;
@@ -286,6 +319,7 @@ body{
 .see-how-works {
     background-color: var(--textblue);
     height: 118px;
+    top: 120px;
 }
 .how-works{
     padding-top: 38px !important;
@@ -571,19 +605,16 @@ p.search-work-tag {
     box-shadow: none !important;
 }
 .travel-card>img {
-    width: 300px;
-    height: 300px;
-    background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 .travel-details {
-    padding-left: 0px !important;
+    padding-left: 20px !important;
 }
 .tip-two{
-  padding-left: 36px !important;
+  padding-left: 0px !important;
 }
 .tip-three{
-    padding-left: 50px !important;
+    padding-left: 0px !important;
 }
 .solid {
   background-color: var(--white) !important;
@@ -696,6 +727,9 @@ p.how-works>.see {
     font-family: CircularStd-Black !important;
     font-size: 20px !important;
 }
+.search-city{
+  width: 300px !important;
+}
 .search{
   width: 300px !important;
   height: 38px !important;
@@ -724,6 +758,7 @@ p.how-works>.see {
 .see-how-works{
   width: 335px !important;
   height: 80px !important;
+  top: 0px;
 }
 .how-works{
   margin-top: 58px !important;
@@ -890,7 +925,7 @@ p.how-works>.see {
 .what{
   width: 450px !important;
 }
-.where{
+.where,.search-city{
   width: 450px !important;
 }
 .search-button{
@@ -908,6 +943,7 @@ p.how-works>.see {
 .see-how-works{
   width: 500px !important;
   height: 80px !important;
+  top: 10px;
 }
 .how-works{
   margin-top: 52px !important;
@@ -1023,6 +1059,9 @@ p.how-works>.see {
 .where-search,.where{
   width: 150px !important;
 }
+.search-city{
+  width: 150px !important;
+}
 .index-locate-button{
   margin-left: -30px !important;
 }
@@ -1075,5 +1114,29 @@ p.how-works>.see {
   background-color: var(--white) !important;
   transition: background-color 1s ease 0s;
   box-shadow: 0 0 4px grey;
+}
+.see-how-works{
+  top: 0px;
+}
+}
+/******** min 768 *********/
+@media (min-width: 993px) and (max-width: 1024px) {
+.search,.what {
+  width: 300px !important;
+}
+.where-search{
+  width: 300px !important;
+}
+.where{
+  width: 200px !important;
+}
+.search-city{
+  width: 200px !important;
+}
+.index-locate-button{
+  margin-left: 0px !important;
+}
+.see-how-works{
+  top: 0px;
 }
 }
