--- a/app/views/washer/list.html.erb
+++ b/app/views/washer/list.html.erb
@@ -85,7 +85,9 @@
      <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
    <div class="container">
-    <img src="assets/logo.png" alt="logo">
+    <a href="/">
+      <img src="assets/logo.png" alt="logo">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="   navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -289,8 +291,8 @@
                               <div class="card-body pt-2">
                                 <div class="row">
                                     <div class="col-md-8">
-                                      <p class="shop-title">
-                                        <a href="/info/<%= result.name.squish.downcase.gsub(" ","-") %>/<%= result.id %>">
+                                      <p>
+                                        <a href="/info/<%= result.name.squish.downcase.gsub(" ","-") %>/<%= result.id %>"  class="shop-title">
                                           <%= result.name %>
                                         </a>    
                                       </p>
