--- a/app/views/washer/list.html.erb
+++ b/app/views/washer/list.html.erb
@@ -86,7 +86,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
    <div class="container">
     <a href="/">
-      <img src="assets/logo.png" alt="logo">
+      <img src="/assets/logo.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="   navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -286,7 +286,7 @@
                         <% @results.each do |result| %>
                         <div class="col-md-5  py-2 listpage-card-column"> <!-- shop details card  -->
                             <div class="card mb-4 shop-card shop-listpage-card">
-                             <img src="assets/women.jpg" alt="magnify" class="card-image listpage-card-image img-fluid">
+                             <img src="/assets/women.jpg" alt="magnify" class="card-image listpage-card-image img-fluid">
                              <button class="btn btn-success featured-img-button" type="submit">Featured</button>
                               <div class="card-body pt-2">
                                 <div class="row">
@@ -385,7 +385,7 @@
                    <div class="col-md-12">
                      <div class="row">
                             <div class="col-md-4 remove-padding-right padding-right">
-                              <img src="assets/women.jpg" class="more-img img-fluid">
+                              <img src="/assets/women.jpg" class="more-img img-fluid">
                             </div>
                             <div class="col-md-8 ">
                               <div class="card-block listpage-card-block  ">
@@ -414,7 +414,7 @@
                    <div class="col-md-12">
                      <div class="row">
                             <div class="col-md-4 remove-padding-right padding-right">
-                              <img src="assets/women.jpg" class="more-img img-fluid">
+                              <img src="/assets/women.jpg" class="more-img img-fluid">
                             </div>
                             <div class="col-md-8 ">
                               <div class="card-block listpage-card-block-block  ">
@@ -443,7 +443,7 @@
                    <div class="col-md-12">
                      <div class="row">
                             <div class="col-md-4 remove-padding-right padding-right">
-                              <img src="assets/women.jpg" class="more-img img-fluid">
+                              <img src="/assets/women.jpg" class="more-img img-fluid">
                             </div>
                             <div class="col-md-8 ">
                               <div class="card-block listpage-card-block  ">
@@ -480,7 +480,7 @@
                    <div class="col-md-12">
                      <div class="row">
                             <div class="col-md-4 remove-padding-right padding-right">
-                              <img src="assets/cycle.jpg" class="more-img img-fluid">
+                              <img src="/assets/cycle.jpg" class="more-img img-fluid">
                             </div>
                             <div class="col-md-8 ">
                               <div class="card-block listpage-card-block  ">
@@ -509,7 +509,7 @@
                    <div class="col-md-12">
                      <div class="row">
                             <div class="col-md-4 remove-padding-right padding-right">
-                              <img src="assets/cycle.jpg" class="more-img img-fluid">
+                              <img src="/assets/cycle.jpg" class="more-img img-fluid">
                             </div>
                             <div class="col-md-8 ">
                               <div class="card-block listpage-card-block  ">
@@ -538,7 +538,7 @@
                    <div class="col-md-12">
                      <div class="row">
                             <div class="col-md-4 remove-padding-right padding-right">
-                              <img src="assets/cycle.jpg" class="more-img img-fluid">
+                              <img src="/assets/cycle.jpg" class="more-img img-fluid">
                             </div>
                             <div class="col-md-8 ">
                               <div class="card-block listpage-card-block  ">
@@ -575,7 +575,7 @@
                    <div class="col-md-12">
                      <div class="row">
                             <div class="col-md-4 remove-padding-right padding-right">
-                              <img src="assets/handshake.jpg" class="more-img img-fluid">
+                              <img src="/assets/handshake.jpg" class="more-img img-fluid">
                             </div>
                             <div class="col-md-8 ">
                               <div class="card-block listpage-card-block  ">
@@ -604,7 +604,7 @@
                    <div class="col-md-12">
                      <div class="row">
                             <div class="col-md-4 remove-padding-right padding-right">
-                              <img src="assets/handshake.jpg" class="more-img img-fluid">
+                              <img src="/assets/handshake.jpg" class="more-img img-fluid">
                             </div>
                             <div class="col-md-8 ">
                               <div class="card-block listpage-card-block  ">
@@ -633,7 +633,7 @@
                    <div class="col-md-12">
                      <div class="row">
                             <div class="col-md-4 remove-padding-right padding-right">
-                              <img src="assets/handshake.jpg" class="more-img img-fluid">
+                              <img src="/assets/handshake.jpg" class="more-img img-fluid">
                             </div>
                             <div class="col-md-8 ">
                               <div class="card-block listpage-card-block  ">
@@ -682,7 +682,7 @@
      <div class="container">
      <div class="row">
        <div class="col-md-4 col-sm-12 col-xs-12 ">
-         <img src="assets/logo-white.png" class="center">
+         <img src="/assets/logo-white.png" class="center">
          <div class="address text d-none d-sm-none d-md-block">
            <p class="company-name">Global Headquarters</p>
          <p>#31, 9th Main Rd, 6th Sector,<br>HSR Layout, Bengaluru, <br>Karnataka 560102</p>
