--- a/app/views/washer/list.html.erb
+++ b/app/views/washer/list.html.erb
@@ -1,3 +1,5 @@
+<%= render 'navbar' %>
+
 <div id="content" >
 <!-- Sidebar  -->
         <nav id="sidebar">
@@ -78,45 +80,6 @@
                     </form>
             </div><!-- sidebar content -->
         </nav>
-
-
-
-    
-     <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-   <div class="container">
-    <a href="/">
-      <img src="/assets/logo.png" alt="logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="   navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          EXPLORE <i class="fas fa-chevron-down"></i>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">BLOG</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link login" href="#"><i class="far fa-user-circle"></i>&nbsp;LOGIN/SIGNUP</a>
-        </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0 form-row-mobile">
-      <button class="btn btn-outline-success mr-sm-2 my-2 my-sm-0 listpage-contactus" type="submit">CONTACT US</button>
-      <button class="btn btn-success my-2 my-sm-0 listpage-addlisting" type="submit">ADD LISTING</button>
-    </form>
-  </div>
-   </div>
-</nav>
-<!-- navigation ends-->
 
 
 
