--- a/app/views/washer/index.html.erb
+++ b/app/views/washer/index.html.erb
@@ -1,195 +1,4 @@
-    <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-   <div class="container">
-    <img src="assets/logo.png" alt="logo">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="   navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          EXPLORE <i class="fas fa-chevron-down"></i>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" data-toggle="modal" data-target="#exampleModalCenter">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">BLOG</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link login" href="#"><i class="far fa-user-circle"></i>&nbsp;LOGIN/SIGNUP</a>
-        </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0 form-row-mobile">
-      <button class="btn btn-outline-success mr-sm-2 my-2 my-sm-0 contactus" type="submit">CONTACT US</button>
-      <button class="btn btn-success my-2 my-sm-0 addlisting" type="submit">ADD LISTING</button>
-    </form>
-  </div>
-   </div> 
-</nav>
-<!-- navigation ends-->
-
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
-    <div class="modal-content">
-      <div class="modal-header modal-header-action">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Cities</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body modal-body-action">
-      <div class="row action-cities">
-       <div class="col">
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="/city/new-york">New York</a></li>
-              <li class="list-group-item"><a href="/city/albuquerque">Albuquerque</a></li>
-              <li class="list-group-item"><a href="/city/san-jose">San Jose</a></li>
-              <li class="list-group-item"><a href="/city/fort-worth">Fort Worth</a></li>
-              <li class="list-group-item"><a href="/city/milwaukee">Milwaukee</a></li>
-              <li class="list-group-item"><a href="/city/nashville">Nashville</a></li>
-              <li class="list-group-item"><a href="/city/baltimore">Baltimore</a></li>
-              <li class="list-group-item"><a href="/city/saint-paul">Saint Paul</a></li>
-              <li class="list-group-item"><a href="/city/raleigh">Raleigh</a></li>
-              <li class="list-group-item"><a href="/city/boston">Boston</a></li>
-              <li class="list-group-item"><a href="/city/salt-lake-city">Salt Lake City</a></li>
-              <li class="list-group-item"><a href="/city/tulsa">Tulsa</a></li>
-            </ul> 
-       </div>
-       <div class="col">
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="/city/brooklyn">Brooklyn</a></li>
-              <li class="list-group-item"><a href="/city/chicago">Chicago</a></li>
-              <li class="list-group-item"><a href="/city/houston">Houston</a></li>
-              <li class="list-group-item"><a href="/city/san-francisco">San Francisco</a></li>
-              <li class="list-group-item"><a href="/city/seattle">Seattle</a></li>
-              <li class="list-group-item"><a href="/city/atlanta">Atlanta</a></li>
-              <li class="list-group-item"><a href="/city/los-angeles">Los Angeles</a></li>
-              <li class="list-group-item"><a href="/city/philadelphia">Philadelphia</a></li>
-              <li class="list-group-item"><a href="/city/dallas">Dallas</a></li>
-              <li class="list-group-item"><a href="/city/las-vegas">Las Vegas</a></li>
-              <li class="list-group-item"><a href="/city/orlando">Orlando</a></li>
-              <li class="list-group-item"><a href="/city/san-antonio">San Antonio</a></li>
-            </ul> 
-       </div>
-       <div class="col">
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="/city/denver">Denver</a></li>
-              <li class="list-group-item"><a href="/city/austin">Austin</a></li>
-              <li class="list-group-item"><a href="/city/saint-louis">Saint Louis</a></li>
-              <li class="list-group-item"><a href="/city/tampa">Tampa</a></li>
-              <li class="list-group-item"><a href="/city/washington">Washington</a></li>
-              <li class="list-group-item"><a href="/city/jacksonville">Jacksonville</a></li>
-              <li class="list-group-item"><a href="/city/columbus">Columbus</a></li>
-              <li class="list-group-item"><a href="/city/pittsburgh">Pittsburgh</a></li>
-              <li class="list-group-item"><a href="/city/phoenix">Phoenix</a></li>
-              <li class="list-group-item"><a href="/city/san-diego">San Diego</a></li>
-              <li class="list-group-item"><a href="/city/charlotte">Charlotte</a></li>
-              <li class="list-group-item"><a href="/city/indianapolis">Indianapolis</a></li>
-            </ul> 
-       </div>
-       <div class="col">
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="/city/marietta">Marietta</a></li>
-              <li class="list-group-item"><a href="/city/naples">Naples</a></li>
-              <li class="list-group-item"><a href="/city/bakersfield">Bakersfield</a></li>
-              <li class="list-group-item"><a href="/city/columbia">Columbia</a></li>
-              <li class="list-group-item"><a href="/city/mesa">Mesa</a></li>
-              <li class="list-group-item"><a href="/city/lexington">Lexington</a></li>
-              <li class="list-group-item"><a href="/city/oakland">Oakland</a></li>
-              <li class="list-group-item"><a href="/city/boca-raton">Boca Raton</a></li>
-              <li class="list-group-item"><a href="/city/greensboro">Greensboro</a></li>
-              <li class="list-group-item"><a href="/city/fort-myers">Fort Myers</a></li>
-              <li class="list-group-item"><a href="/city/long-beach">Long Beach</a></li>
-              <li class="list-group-item"><a href="/city/irvine">Irvine</a></li>
-            </ul> 
-       </div>
-       <div class="col">
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="/city/miami">Miami</a></li>
-              <li class="list-group-item"><a href="/city/cincinnati">Cincinnati</a></li>
-              <li class="list-group-item"><a href="/city/tucson">Tucson</a></li>
-              <li class="list-group-item"><a href="/city/louisville">Louisville</a></li>
-              <li class="list-group-item"><a href="/city/sacramento">Sacramento</a></li>
-              <li class="list-group-item"><a href="/city/bronx">Bronx</a></li>
-              <li class="list-group-item"><a href="/city/memphis">Memphis</a></li>
-              <li class="list-group-item"><a href="/city/cleveland">Cleveland</a></li>
-              <li class="list-group-item"><a href="/city/oklahoma-city">Oklahoma City</a></li>
-              <li class="list-group-item"><a href="/city/portland">Portland</a></li>
-              <li class="list-group-item"><a href="/city/minneapolis">Minneapolis</a></li>
-            </ul> 
-       </div>
-       <div class="col">
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="/city/scottsdale">Scottsdale</a></li>
-              <li class="list-group-item"><a href="/city/honolulu">Honolulu</a></li>
-              <li class="list-group-item"><a href="/city/new-orleans">New Orleans</a></li>
-              <li class="list-group-item"><a href="/city/baton-rouge">Baton Rouge</a></li>
-              <li class="list-group-item"><a href="/city/virginia-beach">Virginia Beach</a></li>
-              <li class="list-group-item"><a href="/city/grand-rapids">Grand Rapids</a></li>
-              <li class="list-group-item"><a href="/city/west-palm-beach">West Palm Beach</a></li>
-              <li class="list-group-item"><a href="/city/sarasota">Sarasota</a></li>
-              <li class="list-group-item"><a href="/city/wichita">Wichita</a></li>
-              <li class="list-group-item"><a href="/city/richmond">Richmond</a></li>
-              <li class="list-group-item"><a href="/city/dayton">Dayton</a></li>
-            </ul> 
-       </div>
-       <div class="col">
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="/city/riverside">Riverside</a></li>
-              <li class="list-group-item"><a href="/city/little-rock">Little Rock</a></li>
-              <li class="list-group-item"><a href="/city/greenville">Greenville</a></li>
-              <li class="list-group-item"><a href="/city/chattanooga">Chattanooga</a></li>
-              <li class="list-group-item"><a href="/city/anchorage">Anchorage</a></li>
-              <li class="list-group-item"><a href="/city/madison">Madison</a></li>
-              <li class="list-group-item"><a href="/city/anaheim">Anaheim</a></li>
-              <li class="list-group-item"><a href="/city/hialeah">Hialeah</a></li>
-              <li class="list-group-item"><a href="/city/plano">Plano</a></li>
-              <li class="list-group-item"><a href="/city/spokane">Spokane</a></li>
-              <li class="list-group-item"><a href="/city/staten-island">Staten Island</a></li>
-            </ul> 
-       </div>
-        <div class="col">
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="/city/birmingham">Birmingham</a></li>
-              <li class="list-group-item"><a href="/city/fresno">Fresno</a></li>
-              <li class="list-group-item"><a href="/city/fort-lauderdale">Fort Lauderdale</a></li>
-              <li class="list-group-item"><a href="/city/omaha">Omaha</a></li>
-              <li class="list-group-item"><a href="/city/colorado-springs">Colorado Springs</a></li>
-              <li class="list-group-item"><a href="/city/kansas-city">Kansas City</a></li>
-              <li class="list-group-item"><a href="/city/buffalo">Buffalo</a></li>
-              <li class="list-group-item"><a href="/city/detroit">Detroit</a></li>
-              <li class="list-group-item"><a href="/city/rochester">Rochester</a></li>
-              <li class="list-group-item"><a href="/city/el-paso">El Paso</a></li>
-              <li class="list-group-item"><a href="/city/knoxville">Knoxville</a></li>
-            </ul> 
-       </div>
-       <div class="col">
-          <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="/city/santa-ana">Santa Ana</a></li>
-              <li class="list-group-item"><a href="/city/mobile">Mobile</a></li>
-              <li class="list-group-item"><a href="/city/reno">Reno</a></li>
-              <li class="list-group-item"><a href="/city/saint-petersburg">Saint Petersburg</a></li>
-              <li class="list-group-item"><a href="/city/tallahassee">Tallahassee</a></li>
-              <li class="list-group-item"><a href="/city/arlington">Arlington</a></li>
-              <li class="list-group-item"><a href="/city/vancouver">Vancouver</a></li>
-              <li class="list-group-item"><a href="/city/fort-wayne">Fort Wayne</a></li>
-            </ul> 
-       </div> 
-
-
-   </div>
-      </div>
-      <div class="modal-footer modal-footer-action">
-        <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-
+<%= render 'navbar' %>
 
 <!-- jumbotron -->
 <div class="explore-header"> 
