--- a/app/views/washer/_navbar.html.erb
+++ b/app/views/washer/_navbar.html.erb
@@ -1,7 +1,9 @@
     <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
    <div class="container">
-    <img src="/assets/logo.png" alt="logo">
+    <a href="/">
+      <img src="/assets/logo.png" alt="logo">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="   navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
